# TsunamiSight

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/superpowers/plans/: 2026-06-28-templated-textproto-plugins.md
docs/superpowers/specs/: 2026-06-28-templated-textproto-plugins-design.md
tests/: test_main.py  test_parser.py  test_sighting.py
tests/fixtures/: google_main_id_underscore.java  multi_cve_shellshock.java  no_cve_generic.java  single_cve.java  templated_cve.textproto  templated_no_cve.textproto
tsunamisight/: conf_sample.py  config.py  main.py  monitoring.py  parser.py  sighting.py
