[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "TsunamiSight"
version = "0.1.1"
description = "A client that extracts vulnerability observations from Google's Tsunami Security Scanner plugin repository and pushes them to a Vulnerability-Lookup instance."
authors = [
    {name = "Philippe Parage", email = "philippe@ppa.lu"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["Vulnerability-Lookup", "Vulnerability", "CVE", "Tsunami"]
dynamic = ["classifiers"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyvulnerabilitylookup (>=2.14.0)",
    "requests (>=2.32.5)",
    "valkey (>=6.1.0,<7.0.0)"
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.urls]
Homepage = "https://github.com/vulnerability-lookup/TsunamiSight"
Repository = "https://github.com/vulnerability-lookup/TsunamiSight"
Changelog = "https://github.com/vulnerability-lookup/TsunamiSight/blob/main/CHANGELOG.md"

[project.scripts]
TsunamiSight = "tsunamisight.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
include = ["README.md", "COPYING", "tsunamisight/conf_sample.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"
